@@ -1,3 +1,2 @@
 
 TODO:
-- check if helmet is already registered & add suffix
